--- a/public/CSS/ajouterStagiaire.css
+++ b/public/CSS/ajouterStagiaire.css
@@ -1,18 +1,51 @@
-.input {
+input {
     display: flex;
     flex-direction: column;
-    width: 25%;
+    border-radius: 0.6em;
+    height: 3em;
+    width: 20em;
 }
 
-.grill {
-    display: grid;
-    grid-area: 1/2/1/1;
+.formAll {
+    margin-left: 15em;
+    margin-right: 6em;
+    font-size: 30px;
+    margin-top: 6em;
+}
+
+.choix {
+    margin-top: 2em;
+}
+
+.form {
+    width: 65%;
+}
+
+.label {
+    display: flex;
 }
 
 .liste {
     margin-top: 20px;
     display: flex;
     flex-direction: column;
-    width: 25%;
+
     height: 25%;
+
+}
+
+select {
+    width: 44%;
+    height: 40px;
+    border-radius: 0.6em;
+    border: 2px solid rgba(0, 0, 0, 0.85);
+}
+
+.button {
+    border-radius: 2em;
+    margin-top: 15px;
+    width: 7em;
+    height: 15%;
+    font-size: 25px;
+    cursor: pointer;
 }
