--- a/public/CSS/ajouterStagiaire.css
+++ b/public/CSS/ajouterStagiaire.css
@@ -1,3 +1,28 @@
+input {
+    display: flex;
+    flex-direction: column;
+    border-radius: 0.6em;
+    height: 3em;
+    width: 20em;
+}
+
+.formAll {
+    margin-left: 15em;
+    margin-right: 6em;
+    font-size: 30px;
+    margin-top: 6em;
+}
+
+.choix {
+    margin-top: 2em;
+}
+
+.form {
+    width: 65%;
+}
+
+.label {
+    display: flex;
 .input {
     display: flex;
     flex-direction: column;
@@ -13,6 +38,23 @@
     margin-top: 20px;
     display: flex;
     flex-direction: column;
+    height: 25%;
+}
+
+select {
+    width: 44%;
+    height: 40px;
+    border-radius: 0.6em;
+    border: 2px solid rgba(0, 0, 0, 0.85);
+}
+
+.button {
+    border-radius: 2em;
+    margin-top: 15px;
+    width: 7em;
+    height: 15%;
+    font-size: 25px;
+    cursor: pointer;
     width: 25%;
     height: 25%;
 }
