--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,4 +1,8 @@
 <!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <title>{% block title %}Welcome!{% endblock %}</title>
 <html lang="fr">
     <head>
         <meta charset="UTF-8">
@@ -10,6 +14,7 @@
     <body>
     {% block header %}
     {% endblock %}
+        {% block body %}{% endblock %}
     </head>
     <body>
         <header>
