--- a/templates/ajouter_stagiaire/ajouter.html.twig
+++ b/templates/ajouter_stagiaire/ajouter.html.twig
@@ -4,35 +4,9 @@
     <h1>Ajouter un stagiaire</h1>
 {% endblock %}
 
-{% block body %}
-    <div class="formAll">
-        {{ form_start(ajoutStagiaireForm) }}
-        <div class="label">
-            <div class="form">
-                {{ form_label(ajoutStagiaireForm.grade) }}
-                {{ form_widget(ajoutStagiaireForm.grade) }}
-            </div>
-            <div class="form">
-                {{ form_label(ajoutStagiaireForm.compagnie) }}
-                {{ form_widget(ajoutStagiaireForm.compagnie) }}
-            </div>
-        </div>
-        <div class="label">
-            <div class="form">
-                {{ form_label(ajoutStagiaireForm.nom) }}
-                {{ form_widget(ajoutStagiaireForm.nom) }}
-            </div>
-            <div class="form">
-                {{ form_label(ajoutStagiaireForm.stage) }}
-                {{ form_widget(ajoutStagiaireForm.stage) }}
-            </div>
-        </div>
-        <div class="input">
-            {{ form_label(ajoutStagiaireForm.prenom) }}
-            {{ form_widget(ajoutStagiaireForm.prenom) }}
-        </div>
-        {{ form_end(ajoutStagiaireForm) }}
-    </div>
+{% block main %}
+<div class="formAll">
+
 
     <div class="grill">
         {{ form_start(ajoutStagiaireForm) }}
@@ -62,4 +36,4 @@
         </div>
         {{ form_end(ajoutStagiaireForm) }}
     </div>
-{% endblock %}
+    {% endblock %}
