--- a/public/CSS/ajouterStagiaire.css
+++ b/public/CSS/ajouterStagiaire.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@1,300&display=swap');
+
+body {
+    font-family: 'Roboto Mono', monospace;
+}
+
 input {
     display: flex;
     flex-direction: column;
@@ -10,7 +16,7 @@ input {
     margin-left: 15em;
     margin-right: 6em;
     font-size: 30px;
-    margin-top: 6em;
+    margin-top: 3em;
 }
 
 .choix {
@@ -23,10 +29,13 @@ input {
 
 .label {
     display: flex;
+}
+
 .input {
     display: flex;
     flex-direction: column;
     width: 25%;
+
 }
 
 .grill {
@@ -49,12 +58,37 @@ select {
 }
 
 .button {
-    border-radius: 2em;
+    border-radius: 0.8em;
     margin-top: 15px;
-    width: 7em;
-    height: 15%;
+    width: 8em;
+    height: 2em;
     font-size: 25px;
     cursor: pointer;
-    width: 25%;
-    height: 25%;
+    background: #387796;
+    color: white;
+}
+
+.titre_stagiaire {
+    text-align: center;
+}
+
+#ajout_stagiaire_grade {
+    background: #D9D9D9;
+}
+
+#ajout_stagiaire_nom {
+    background: #D9D9D9;
+}
+
+#ajout_stagiaire_prenom {
+    background: #D9D9D9;
+}
+
+#ajout_stagiaire_compagnie {
+    background: #D9D9D9;
+}
+
+#ajout_stagiaire_stage {
+    background: #D9D9D9;
+    width: 21em;
 }
