--- a/templates/ajouter_stagiaire/ajouter.html.twig
+++ b/templates/ajouter_stagiaire/ajouter.html.twig
@@ -1,39 +1,37 @@
 {% extends 'base.html.twig' %}
 
 {% block header %}
-    <h1>Ajouter un stagiaire</h1>
+    <h1 class="titre_stagiaire">Ajouter un stagiaire</h1>
 {% endblock %}
 
 {% block main %}
-<div class="formAll">
-
-
-    <div class="grill">
+    <div class="formAll">
         {{ form_start(ajoutStagiaireForm) }}
-        <div class="grill">
-            <div class="input">
+        <div class="label">
+            <div class="form">
                 {{ form_label(ajoutStagiaireForm.grade) }}
                 {{ form_widget(ajoutStagiaireForm.grade) }}
             </div>
-            <div class="input">
-                {{ form_label(ajoutStagiaireForm.nom) }}
-                {{ form_widget(ajoutStagiaireForm.nom) }}
-            </div>
-            <div class="input">
-                {{ form_label(ajoutStagiaireForm.prenom) }}
-                {{ form_widget(ajoutStagiaireForm.prenom) }}
-            </div>
-            <div class="input">
+            <div class="form">
                 {{ form_label(ajoutStagiaireForm.compagnie) }}
                 {{ form_widget(ajoutStagiaireForm.compagnie) }}
             </div>
-            <div class="liste">
+        </div>
+        <div class="label">
+            <div class="form">
+                {{ form_label(ajoutStagiaireForm.nom) }}
+                {{ form_widget(ajoutStagiaireForm.nom) }}
+            </div>
+            <div class="form">
                 {{ form_label(ajoutStagiaireForm.stage) }}
                 {{ form_widget(ajoutStagiaireForm.stage) }}
             </div>
-
-
+        </div>
+        <div class="input">
+            {{ form_label(ajoutStagiaireForm.prenom) }}
+            {{ form_widget(ajoutStagiaireForm.prenom) }}
         </div>
         {{ form_end(ajoutStagiaireForm) }}
     </div>
-    {% endblock %}
+
+{% endblock %}
