--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <title>{% block title %}Décompte rationnaire{% endblock %}</title>
@@ -7,6 +7,7 @@
           href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
     <link rel="stylesheet" href="{{ asset('CSS/style.css') }}">
     <link rel="stylesheet" href="{{ asset('CSS/ajouterStagiaire.css') }}">
+    <link rel="stylesheet" href="{{ asset('CSS/login.css') }}">
 </head>
 
 {% block header %}
@@ -25,7 +26,9 @@
         <div id="divLogoVide"></div>
     </div>
     <nav>
-
+        <div id="divDeconnexionIcon">
+            <a href="{{ path('login') }}"><img id="deconnexionIcon" src="{{ asset('CSS/media/power-off-solid.png') }}" alt="deconnexion"></a>
+        </div>
     </nav>
 </header>
 <main>
