--- a/templates/ajouter_stagiaire/ajouter.html.twig
+++ b/templates/ajouter_stagiaire/ajouter.html.twig
@@ -10,7 +10,7 @@
         <div class="label">
             <div class="form">
                 {{ form_label(ajoutStagiaireForm.grade) }}
-                {{ form_widget(ajoutStagiaireForm.grade , ) }}
+                {{ form_widget(ajoutStagiaireForm.grade) }}
             </div>
             <div class="form">
                 {{ form_label(ajoutStagiaireForm.compagnie) }}
