--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -26,7 +26,9 @@
     </div>
     <nav>
         <div id="divDeconnexionIcon">
-            <a href="{{ path('login') }}"><img id="deconnexionIcon" src="{{ asset('CSS/media/power-off-solid.png') }}" alt="deconnexion"></a>
+            <a href="{{ path('app_logout') }}"><img id="deconnexionIcon"
+                                                    src="{{ asset('CSS/media/power-off-solid.png') }}"
+                                                    alt="deconnexion"></a>
         </div>
     </nav>
     {% block header %}
