VF-Logo_CMFP_onglet

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>{% block title %}Décompte rationnaire{% endblock %}</title>
-    <link rel="icon"
-          href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
+    <link rel="icon" href="{{ asset('CSS/media/new_Logo_CMFP.png') }}">
     <link rel="stylesheet" href="{{ asset('CSS/style.css') }}">
     <link rel="stylesheet" href="{{ asset('CSS/ajouterStagiaire.css') }}">
     <link rel="stylesheet" href="{{ asset('CSS/login.css') }}">
