--- a/public/CSS/ajouterStagiaire.css
+++ b/public/CSS/ajouterStagiaire.css
@@ -92,3 +92,33 @@ select {
     background: #D9D9D9;
     width: 21em;
 }
+
+.checkbox {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 2em;
+    width: 100%;
+}
+
+.checkbox > input {
+    height: 100%;
+    width: 5%;
+    margin-top: 2em;
+    display: flex;
+
+}
+
+.checkbox > label {
+    display: flex;
+    align-items: center;
+}
+
+#registration_form_stages > input {
+    width: 5vw;
+    height: 100%;
+}
+
+#registration_form_stages > label {
+    width: 5vw;
+
+}
