--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -5,52 +5,44 @@
         {% if error %}
             <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
         {% endif %}
-
-        {% if app.user %}
-            <div class="mb-3">
-                You are logged in as {{ app.user.userIdentifier }}, <a href="{{ path('app_logout') }}">Logout</a>
-            </div>
-        {% endif %}
-        <div id="gridH1parent">
-            <div id="gridVide1"></div>
-            <div id="gridH1"><h1 class="h3 mb-3 font-weight-normal">Connexion</h1></div>
-            <div id="gridVide2"></div>
+        <div class="gridH1Parent">
+            <div class="gridH1Vide1"></div>
+            <div class="gridH1"><h1 class="h3 mb-3 font-weight-normal">Connexion</h1></div>
+            <div class="gridH1Vide2"></div>
         </div>
-        <div>
-            <div id="formLabelInput">
-                <div class="elementsForm">
-                    <label for="inputMail">E-mail</label>
-                </div>
-                <div class="elementsForm">
-                    <input type="email" value="{{ last_username }}" name="email" id="inputMail" class="form-control"
-                           autocomplete="mail" required autofocus>
-                </div>
-                <div class="elementsForm">
-                    <label for="inputMotDePasse">Mot de passe</label>
-                </div>
-                <div class="elementsForm">
-                    <input type="password" name="password" id="inputMotDePasse" class="form-control"
-                           autocomplete="current-motDePasse" required>
-                </div>
-                <input type="hidden" name="_csrf_token"
-                       value="{{ csrf_token('authenticate') }}"
-                >
-                {#
-                Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
-                See https://symfony.com/doc/current/security/remember_me.html
+        <div class="formLabelInput">
+            <div class="elementsForm">
+                <label for="inputMail">E-mail</label>
+            </div>
+            <div class="elementsForm">
+                <input type="email" value="{{ last_username }}" name="email" id="inputMail" class="form-control"
+                       autocomplete="mail" required autofocus>
+            </div>
+            <div class="elementsForm">
+                <label for="inputMotDePasse">Mot de passe</label>
+            </div>
+            <div class="elementsForm">
+                <input type="password" name="password" id="inputMotDePasse" class="form-control"
+                       autocomplete="current-motDePasse" required>
+            </div>
+            <input type="hidden" name="_csrf_token"
+                   value="{{ csrf_token('authenticate') }}"
+            >
+            {#
+            Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
+            See https://symfony.com/doc/current/security/remember_me.html
 
-                <div class="checkbox mb-3">
-                    <label>
-                        <input type="checkbox" name="_remember_me"> Remember me
-                    </label>
-                </div>
-                #}
+            <div class="checkbox mb-3">
+                <label>
+                    <input type="checkbox" name="_remember_me"> Remember me
+                </label>
             </div>
-            <div id="divBouttonConnexion">
-                <button id="bouttonConnexion" type="submit">
-                    CONNEXION
-                </button>
-            </div>
+            #}
+        </div>
+        <div class="divBouttonValidation">
+            <button class="bouttonValidation" type="submit">
+                CONNEXION
+            </button>
         </div>
     </form>
 {% endblock %}
