--- a/public/CSS/header.css
+++ b/public/CSS/header.css
@@ -1,11 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
-
-body {
-    margin: 0;
-    height: 100vh;
-    font-family: 'Inter', sans-serif;
-}
-
 #logoHead {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
@@ -32,9 +24,11 @@ body {
     height: 100px;
 }
 
-#divLogoVide {
+#gridLogoVide {
     grid-area: 1 / 4 / 2 / 5;
 }
+
+/* nav */
 
 nav {
     display: flex;
@@ -45,15 +39,56 @@ nav {
     margin: 0;
 }
 
+.gridNavParent {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: 1fr;
+    grid-column-gap: 0;
+    grid-row-gap: 0;
+    flex: 1 0 auto;
+}
+
+.gridNav1 {
+    grid-area: 1 / 1 / 2 / 2;
+    display: flex;
+    justify-content: start;
+}
+
+.gridNav2Connecte {
+    grid-area: 1 / 2 / 2 / 3;
+    display: flex;
+    justify-content: center;
+    margin-right: 87px;
+}
+
+.gridNav2Deconnecte {
+    grid-area: 1 / 2 / 2 / 3;
+    display: flex;
+    justify-content: center;
+}
+
+.gridNav3 {
+    grid-area: 1 / 3 / 2 / 4;
+    display: flex;
+    justify-content: end;
+}
+
 .elementNav {
     display: flex;
     align-content: center;
     align-items: center;
 }
 
-#bonjourCDS {
+.texteNav {
+    display: flex;
+    align-items: center;
+    text-decoration: none;
     color: #F5F5F5;
     font-size: 20px;
+    margin: 10px;
+}
+
+#bonjourCDS {
     margin-left: 20px;
 }
 
@@ -64,34 +99,4 @@ nav {
     padding: 10px;
     border-radius: 10px;
     display: flex;
-}
-
-#groupElementFooter {
-    margin-top: 100px;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: 1fr;
-    grid-column-gap: 0;
-    grid-row-gap: 0;
-    height: 200px;
-}
-
-#divBackgroundEF1 {
-    grid-area: 1 / 1 / 2 / 2;
-    background-color: #323642;
-}
-
-#divBackgroundEF2 {
-    grid-area: 1 / 2 / 2 / 3;
-    background-color: #2A2C38;
-}
-
-.nav2 {
-    background-color: #1E2128;
-}
-
-#divMinarmFooter {
-    height: 120px;
-    display: flex;
-    justify-content: center;
 }
