--- a/public/CSS/header.css
+++ b/public/CSS/header.css
@@ -54,14 +54,7 @@ nav {
     justify-content: start;
 }
 
-.gridNav2Connecte {
-    grid-area: 1 / 2 / 2 / 3;
-    display: flex;
-    justify-content: center;
-    margin-right: 87px;
-}
-
-.gridNav2Deconnecte {
+.gridNav2 {
     grid-area: 1 / 2 / 2 / 3;
     display: flex;
     justify-content: center;
@@ -86,10 +79,12 @@ nav {
     color: #F5F5F5;
     font-size: 20px;
     margin: 10px;
+    padding: 10px;
+    border-radius: 10px;
 }
 
 #bonjourCDS {
-    margin-left: 20px;
+    margin-left: 5px;
 }
 
 #deconnexionIcon {
