CSS decompte rationnaire

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -9,8 +9,7 @@
     <link rel="stylesheet" href="{{ asset('CSS/main.css') }}">
     <link rel="stylesheet" href="{{ asset('CSS/form.css') }}">
     <link rel="stylesheet" href="{{ asset('CSS/footer.css') }}">
-    {% block css %}
-    {% endblock %}
+    <link rel="stylesheet" href="{{ asset('CSS/decompteRationnaire.css') }}">
     {% block js %}
     {% endblock %}
 </head>
