--- a/public/CSS/decompteRationnaire.css
+++ b/public/CSS/decompteRationnaire.css
@@ -1,9 +1,19 @@
+#titre {
+    margin-left: 20em;
+}
+
 #numSemaine {
     display: flex;
+    margin-left: 50em;
+}
+
+#numSemaine h3 {
+    font-size: 1.5em;
 }
 
 #numSemaine img {
     width: 2%;
     height: 2%;
+    margin: 1.7em;
 }
 
