--- a/templates/ajouter_stagiaire/ajouter.html.twig
+++ b/templates/ajouter_stagiaire/ajouter.html.twig
@@ -2,7 +2,7 @@
 
 {% block lienNav %}
     {% if app.user %}
-            <a class="texteNav + animText" href="{{ path('index_decompte') }}">Décompte rationnaire</a>
+        <a class="texteNav + animText" href="{{ path('decompte_index') }}">Décompte rationnaire</a>
     {% endif %}
 {% endblock %}
 
